--- a/css/style.css
+++ b/css/style.css
@@ -196,3 +196,118 @@
     margin-top: 476px;
     margin-left: 72px;
 }
+
+/* секция macbook*/
+
+.macbook {
+    background-color:#D53005;
+    width: 100%;
+    height: 1024px;
+}
+
+.container-mac {
+    padding-left: 20px;
+}
+
+.macbook-content {
+    padding-top: 30px;
+}
+
+.mac-store {
+    font-family: Arial;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 35px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: white;
+    margin-left: 100px;
+    margin-top: 60px;
+}
+
+.main-mac-content {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+
+.maacbook-text-content {
+    display: flex;
+    flex-direction: column;
+    position: absolute; 
+}
+
+.mac-btn {
+    background-color: black;
+    color: white;
+    text-align: center;
+    height: 60px;
+    width: 240px;
+    padding-left: 50px;
+    padding-right: 50px;
+    line-height: 26px;
+    border-radius: 30px;
+    font-size: 20px;
+    font-family: Arial;
+    margin-top: 137px;
+    margin-left: 100px;
+    box-shadow: -4px -4px 4px 0px #FFFFFF1A;
+    box-shadow: 4px 4px 4px 0px #00000040;
+    margin-bottom: 48px;
+}
+
+.mac-btn2 {
+    background-color: white;
+    text-align: center;
+    height: 60px;
+    width: 240px;
+    padding-left: 50px;
+    padding-right: 50px;
+    line-height: 28px;
+    border-radius: 30px;
+    font-size: 20px;
+    font-family: Arial;
+    margin-left: 100px;
+    border: 1px black;
+    box-shadow: -4px -4px 4px 0px #FFFFFF1A;
+    box-shadow: 4px 4px 4px 0px #00000040;
+    margin-bottom: 135px;
+}
+
+.macbook-text-content h2 {
+    font-family: "Montserrat";
+    font-size: 21px;
+    line-height: 26px;
+    font-weight: 600;
+    color: white;
+    text-align: center;
+    margin-bottom: 17px;
+}
+
+.mac-overview {
+    font-family: "Montserrat";
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22px;
+    text-align: center;   
+    color: white;
+    width: 431px;
+}
+
+.mac-nav {
+    text-align: center;
+    border-bottom: 1px solid #000000B2;
+    color: #000000B2;
+    width: 379px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+.macbook-dev {
+    position: absolute;
+    right: 0;
+    top: 50px;
+}
+
+
